# icalspan

./: .gitignore  LICENSE  README.md  pyproject.toml
src/icalspan/: __init__.py  span.py
tests/: tests_unit.py
